--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -24,6 +24,11 @@
         padding:4px;
     }
 
+    #hero_label::after{
+        content: "large";
+    }
+    
+
 
     /* worked in large view */
     /* .google-maps{
