--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,31 +1,16 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-* {
-    font-family: 'Roboto';
-    box-sizing: border-box;
-    --background-color: #32343e; 
-    --primary-color:white;;
-    --grey-blue:#404c54;
-    --blue-enough:#446b6a;
-    --almost-teal:#478d73;
-    --sea-green:#5ba95d;
+@media screen and (min-width:600px) {  
     
-}
-
 * {
     font-family: 'tektur','san-serif';
     box-sizing: border-box;
 }
 
-::selection {
-    color:var(--white);
-    background: var(--sea-green);
-    /* #8B008B; */
-}
     
 header{
-    background-color: var(--primary-color);
+
     display:grid;
     grid-column:2/4 ;
 }
@@ -43,11 +28,9 @@ header img{
 }
 
 main {
-    background-color: var(--primary-color);
     max-width: 800px; 
     margin: 75px auto;
     text-align: left;
-    
     display:grid;
     grid-template-columns: 2fr;
 } 
@@ -56,20 +39,15 @@ main ul{
     list-style-type: none; 
 }
 
-main a {
-    color:var(--background-color);
-}
 
 nav{
-    background-color:var(--background-color);
-    color: var(--primary-color);
+
     grid-column:span;
     text-align: center;
 }
 
 
 #menu-button{
-    background-color:var(--background-color);
     font-size: 2rem;
     padding:.5rem;
 }
@@ -87,7 +65,6 @@ nav{
 nav ul{ 
     list-style:none; /*what does this do?*/
     text-align: center;
-    background-color: var(--background-color);
     padding-inline-start: 0px; /*what does this do?*/
     display:none; 
 }
@@ -106,30 +83,23 @@ nav ul li{
 nav ul li a{
     display:block;
     text-decoration:none;
-    color:white;
     padding: 1rem;
 }
 
 nav a{
-    color: var(--primary-color);
     text-align: center;
     
 }
 
 nav ul li a:hover{
-    color:var(--background-color);
-    background-color: white;
+
+
     font-weight: bold;  /* makes the text appear thicker/bolded when hovered */
     /* #f028f0 */
 }
 
 nav li{
     list-style-type: none; /*this makes the dots besides the link disapear */
-}
-
-body {
-    color:black;
-    background-color:var(--primary-color);
 }
 
 .card {
@@ -142,17 +112,16 @@ body {
 }
 
 
-.card a:hover{
-    color: var(--primary-color); 
-
+#hero_label::after{
+    content: "medium";
 }
 
 
-
 footer{
-    background-color:var(--background-color);
+   
     padding: 45px;
-    color: var(--primary-color);
     text-align: center;
     
+}
+
 }
