--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -7,7 +7,6 @@
     font-family: 'tektur','san-serif';
     box-sizing: border-box;
 }
-
     
 header{
 
@@ -20,7 +19,6 @@ header img{
     padding: 15px; /*  gives spacing but shortens image */
     width:100px; /*changes width of image*/
 }
-
 
 .cayleigh img{
     float:left;
@@ -39,13 +37,11 @@ main ul{
     list-style-type: none; 
 }
 
-
 nav{
 
     grid-column:span;
     text-align: center;
 }
-
 
 #menu-button{
     font-size: 2rem;
@@ -63,9 +59,9 @@ nav{
 
 /*nav when it's closed  */
 nav ul{ 
-    list-style:none; /*what does this do?*/
+    list-style:none;
     text-align: center;
-    padding-inline-start: 0px; /*what does this do?*/
+    padding-inline-start: 0px; 
     display:none; 
 }
 
@@ -110,18 +106,19 @@ nav li{
     padding: 35px;
     margin: 1rem;  /* this gave the cards spacing between each other */   
 }
-
-
-#hero_label::after{
-    content: "medium";
-}
-
-
 footer{
    
     padding: 45px;
     text-align: center;
     
 }
+/* indext only */
+
+#hero_label::after{
+    content: "medium";
+}
+
+
+
 
 }
