--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -83,7 +83,6 @@ nav ul li a{
     color:var(--text-color);
     padding: 1rem;
 }
-
 nav a{
     color: var(--text-color);
     text-align: center;
@@ -278,32 +277,32 @@ footer img{                   /*This is supposed to work with the logo and any o
 /* ___________________________________________________________________________________________________________________________________________ */
 
                                                 /* Business page (directory.html) */
-#business_main{
+#members_main{
    margin: 1rem auto;
    padding:2rem;
    text-align: center;
 }
        
-.business_cards{
+.members_cards{
     display:grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 }
 
-#business_cards section {
+#members_cards section {
     border-style: solid;
     border-width: 3px;
     border-radius: 5rem;
     padding: 20px; 
     margin: 10px;
 }
-.business_cards button{
+.members_cards button{
     padding: 2rem;
     font-weight: 300;
     background-color: var(--background-color);
      color: var(--almost-teal) /*was previously set to "#478d73"*/
 }
 
-.business_cards button:hover{
+.members_cards button:hover{
     background-color: var(--sea-green);
     color: var(--grey-blue);
 }
