--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -262,18 +262,20 @@ footer img{                   /*This is supposed to work with the logo and any o
     padding: 15px;     /* gives spacing but shortens image  */
     width:150px;           
 }
-     /* an image in the discover.html page */
+ /* an image in the discover.html page */
 .discover-images img{     
     border: 5px solid var(--almost-teal);
     transition: opacity 2s;
 } 
- /* _________________________________________________________________________________________________________________________________________ */
+  /* _________________________________________________________________END images________________________________________________________________  */
+ /*_____________________________________________________________________________________________________________________________________________ */
                         /* DISCOVER Page (discover.html)*/
 .discover {
     text-align: right;
     font-size:2rem;
     padding-bottom: 35rem ;
 }
+
 /* ___________________________________________________________________________________________________________________________________________ */
 
                                                 /* Business page (directory.html) */
