--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -28,11 +28,16 @@
     #menu-button{
         display: none;
     }
-    /* Indext page only */
+
+    /* _______________________________________________Indext page only___________________________________________ */
     #hero_label::after{
         content: "large";
     }
-    
+    /* _______________________________________________________Discover page___________________________________ */
+    .discover-main img{
+        width: 600px;
+    }
+
    
 } 
 
