--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -118,7 +118,28 @@ footer{
     content: "medium";
 }
 
+/* _____________________________________________discover____________________________ */
 
+.discover-main {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+}
+
+.discover-demographics{
+    border-right: 5px solid var(--hover-background-color);
+    padding: 1rem;
+}
+
+.discover-main{
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+}
+
+.discover-main img:hover{
+    box-shadow: 5px 5px black;
+    filter: blur(2px);
+    
+}
 
 
 }
